--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
         <span class="toggle_square"></span>
       </span>
     </label>
-
+    <div></div>
     <div class="formRow">
       <div id="selectRow" class="row">
         <label for="fancy-select">State</label>
