--- a/index.html
+++ b/index.html
@@ -106,6 +106,6 @@ layout: default
       
       <p>The goal of the calculator is to give those who are entering the gig economy a rough estimate of the maximum amount they may owe in taxes. The calculator is also useful for those who have a grasp of what their net taxable income will be. The simple interface will allow you to avoid the pesky arithmetic involved in the common tiered tax model. </p>
     
-    <p>It's important to note that this website does not claim to give any legal advice. Questions should be referred to a tax professional or lawyer, and estimates should be verified. The calculator automatically exempts those making below the federal standard deduction from the federal tax calculation. States differ when it comes to deducting their state taxe. Speak to a professional for more information. Have fun!</p>
+    <p>It's important to note that this website does not claim to give any legal advice. Questions should be referred to a tax professional or lawyer, and estimates should be verified. The calculator automatically exempts those making below the federal standard deduction from the federal tax calculation. States differ when it comes to deductions. Speak to a professional for more information. Have fun!</p>
   </section>
   
