--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ layout: default
       </div>
     </div>
     <div class="row">
-      <input type="text" name="fancy-text" id="income-input" data-type="currency" placeholder="$1,000,000.00" />
+      <input type="tel" name="fancy-text" id="income-input" data-type="currency" placeholder="$1,000,000.00" />
       <label for="fancy-text"> Income</label>
     </div>
 
