--- a/index.html
+++ b/index.html
@@ -112,4 +112,4 @@ layout: default
     
     <p>It's important to note that this website does not claim to give any legal advice. Questions should be referred to a tax professional or lawyer, and estimates should be verified. The calculator automatically exempts those making below the federal standard deduction from the federal tax calculation. States differ when it comes to deductions. Speak to a professional for more information. Have fun!</p>
   </section>
-  
+</div>
