--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
  <div id="calc">
     <p class="file-year"> *Toggle for filing year </p>
 
-    <label for="contract_toggle" class="contract_toggle">
+    <label class="contract_toggle">
 
       <input type="checkbox" id="contract_toggle" name="contract_toggle" data-index-number="0" />
       <span class="toggle_bar">
@@ -17,7 +17,7 @@ layout: default
     <div class="formRow">
       <div id="selectRow">
         <div id="stateRow" class="row">
-        <label for="fancy-select">State</label>
+        <label>State</label>
         <select name="fancy-select" id="state-select">
           <option>Ala.</option>
           <option>Alaska</option>
@@ -74,7 +74,7 @@ layout: default
       </div>
     
         <div id="statusRow" class="row" > 
-        <label for="fancy-select">Status</label>
+        <label>Status</label>
         <select name="fancy-select" id="status-select">
           <option>Single</option>
           <option>Married Filing Jointly</option>
@@ -88,7 +88,7 @@ layout: default
       
     <div class="row">
       <input type="tel" name="fancy-text" id="income-input" data-type="currency" placeholder="$1,000,000.00" />
-      <label for="fancy-text"> Income</label>
+      <label> Income</label>
     </div>
 
     <button id="tax-button">Tax MY Gig</button>
