--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ layout: default
       
       
     <div class="row">
-      <input type="text" name="fancy-text" id="income-input" data-type="currency" placeholder="$1,000,000.00" />
+      <input type="tel" name="fancy-text" id="income-input" data-type="currency" placeholder="$1,000,000.00" />
       <label> Income</label>
     </div>
 
