--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -14,13 +14,13 @@ title: privacy policy
 
 						<h2>Website Visitors</h2>
 			<p>Like most website operators, Tax My Gig collects non-personally-identifying information of the sort that web browsers and servers typically make available, such as the browser type, language preference, referring site, and the date and time of each visitor request. Tax My Gig's purpose in collecting non-personally identifying information is to better understand how Tax My Gig's visitors use its website. From time to time, Tax My Gig may release non-personally-identifying information in the aggregate, e.g., by publishing a report on trends in the usage of its website.</p>
-			<p>Tax My Gig also collects potentially personally-identifying information like Internet Protocol (IP) addresses for logged in users and for users leaving comments on https://www.taxmygig.com blog posts. Tax My Gig only discloses logged in user and commenter IP addresses under the same circumstances that it uses and discloses personally-identifying information as described below.</p>
+			<p>Tax My Gig also reads your mobile type in order to provide a mobile-first experience. </p>
 			
 						<h2>Gathering of Personally-Identifying Information</h2>
-			<p>Certain visitors to Tax My Gig's websites choose to interact with Tax My Gig in ways that require Tax My Gig to gather personally-identifying information. The amount and type of information that Tax My Gig gathers depends on the nature of the interaction. For example, we ask visitors who sign up for a blog at https://www.taxmygig.com to provide a username and email address.</p>
+			<p> Tax My Gig is a static site and does not store information that is entered into the tax calculator..</p>
 			
 						<h2>Security</h2>
-			<p>The security of your Personal Information is important to us, but remember that no method of transmission over the Internet, or method of electronic storage is 100% secure. While we strive to use commercially acceptable means to protect your Personal Information, we cannot guarantee its absolute security.</p>
+			<p>The security of your Personal Information is important to us, but remember that no method of transmission over the Internet, or method of electronic storage is 100% secure. While we strive to use commercially acceptable means to protect your inputs, we cannot guarantee its absolute security.</p>
 			
 						<h2>Advertisements</h2>
 			<p>Ads appearing on our website may be delivered to users by advertising partners, who may set cookies. These cookies allow the ad server to recognize your computer each time they send you an online advertisement to compile information about you or others who use your computer. This information allows ad networks to, among other things, deliver targeted advertisements that they believe will be of most interest to you. This Privacy Policy covers the use of cookies by Tax My Gig and does not cover the use of cookies by any advertisers.</p>
@@ -48,8 +48,7 @@ title: privacy policy
 			
 			
 						  
-			  <h2></h2>			  
-			  	<p></p>			
+			  
 			
 			<h2>Credit & Contact Information</h2>
 							<p>This privacy policy was created at <a style="color:inherit;text-decoration:none;" href="https://termsandconditionstemplate.com/privacy-policy-generator/" title="Privacy policy template generator" target="_blank">termsandconditionstemplate.com</a>. If you have any questions about this Privacy Policy, please contact us via <a href="mailto:rajiayinla858@gmail.com">email</a> or <a href="tel:6463610140">phone</a>.</p>
