--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ layout: default
 <h1>The Self Employment Tax Calculator</h1>
     <p>The goal of the calculator is to give those who are entering the gig economy a rough estimate of the maximum amount they may owe in taxes. The calculator is also useful for those who have a grasp of what their net taxable income will be. The simple interface will allow you to avoid the pesky arithmetic involved in the common tiered tax model. </p>
    
-   <h2>How Much You'll Owe in Taxes as a Freelancer <h2>
+   <h2>How Much You'll Owe in Taxes as a Freelancer </h2>
    <p>When you're starting out in the gig economy, it can come as a shock when you find out that you owe the IRS more than you thought you would. That's because you may have failed to take the self-employment tax into account. In addition to state and federal taxes, someone who qualifies as self-employed and earns $400 or more must pay a total of 15.3% in taxes. </p>
       <p>You're essentially paying the full price of the FICA tax. The FICA tax consists of Social Security and Medicare. You pay 12.4% on the first 132,900 of earnings(2019) for Social Security and 2.9% on all of your earnings for the Medicare portion. You will pay an additional 0.9% Medicare tax on the amount that your annual income exceeds $200,000 for single filers, $250,000 for married filing jointly, and $125,000 married filing separate. </p>
         
