--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@ layout: default
 
 <p>Those considered self-employed include but are not limited to independent contractors, see Turnidge v. C.I.R., U.S.Tax Ct.2003, 2003 WL 21321813,  practitioner in a sole proprietorship (if they receive income), partners in a venture (if they receive income), and partners in a limited partnership/ partnership.</p>
 
-<p>However, the law is not that simple. It’s very hard to classify roles into neat little boxes. Take the gig economy, for example. As the gig economy continues to change, it may become difficult to classify who is an employee of the company or an independent contractor. Luckily courts have developed factors for determining who is an independent contractor for the purpose of levying self employment tax. Jones v. C.I.R., 94 T.C.M. (CCH) 230 (Tax 2007)</p>
+<p>However, the law is not that simple. It’s very hard to classify roles into neat little boxes. Take the gig economy, for example. As the gig economy continues to change, it may become difficult to classify who is an employee of the company or an independent contractor. Luckily courts have developed factors for determining who is an independent contractor for the purpose of levying self employment tax. Jones v. C.I.R., 94 T.C.M. (CCH) 230 (Tax 2007).</p>
 
     <p> These factors are: </p>
 <ol>
    <li> the degree of control exercised by the principal </li>
-<p>More control by the principal means the worker is likely an employee. The principal does not necessarily have to hover over the worker like a hawk. Gen. Inv. Corp. v. United States, 823 F.2d 337, 342 (9th Cir.1987) For example, workers that set their own hours and clock in and out whenever they want can still be considered employees. This factor is a crucial factor, one that can swing the balance, which makes sense since what separates employees from independent contractors is independence. See Blodgett v. C.I.R., U.S.Tax Ct.2012, 2012 WL 5259054</p>
+<p>More control by the principal means the worker is likely an employee. The principal does not necessarily have to hover over the worker like a hawk. Gen. Inv. Corp. v. United States, 823 F.2d 337, 342 (9th Cir.1987) For example, workers that set their own hours and clock in and out whenever they want can still be considered employees. This factor is a crucial factor, one that can swing the balance, which makes sense since what separates employees from independent contractors is independence. See Blodgett v. C.I.R., U.S.Tax Ct.2012, 2012 WL 5259054.</p>
  
  <li> which party invests in work facilities used by the individual </li>
 <p> If the principal primarily invests in work facilities, then the worker is more likely an employee. But if the worker provides his or her own tools, then it strongly indicates independent contractor status. Breaux & Daigle, Inc. v. United States, 900 F.2d 49, 53 (5th Cir.1990). </p>
@@ -168,15 +168,15 @@ layout: default
 <p>The IRS, for the purposes of levying tax, places liability on those who receive net “income” greater than $400. See 1401(b). Net income is determined by subtracting your gross income (total income) from your losses. Importantly, self-employment income, subject to self-employment tax, is determined by  the source of the income, not the taxpayer's status at the time income is realized. 26 U.S.C.A. §§ 1401(a) For example, you can’t take a job as a freelancer, quit the job, receive your last freelance check while working at McDonalds and decide to forgo self employment tax since you are now a W-2 worker. The source of the income must be a “trade or business” as described above. Below is a list of some unconventional  income sources that can be taxed based on case law:</p>
 <ol>
   <li>Income obtained from religious work if Form 4361 is not filed in a timely manner.Gardner v. C.I.R., U.S.Tax Ct.2013, 2013 WL 892963. More about this in the next section.</li>
-  <li>Income gained from selling capital like real estate if business earns profit, making it a primary means of generating income. Si Boo, LLC v. C.I.R., U.S.Tax Ct.2015, 2015 WL 468165</li>
+  <li>Income gained from selling capital like real estate if business earns profit, making it a primary means of generating income. Si Boo, LLC v. C.I.R., U.S.Tax Ct.2015, 2015 WL 468165.</li>
   <li>Income earned from Real Estate commissions. Jondahl v. C.I.R., U.S.Tax Ct.2005, 2005 WL 675444.</li>
-  <li>Value-added income earned from cooperatives. Fultz v. C.I.R., U.S.Tax Ct.2005, 2005 WL 555269</li>
+  <li>Value-added income earned from cooperatives. Fultz v. C.I.R., U.S.Tax Ct.2005, 2005 WL 555269.</li>
   <li>Income earned running a business entity, including a solo law practice.</li>
   <li>Receiving profits from shares of caught fish with less than 10 crew members. Anderson v. C.I.R., T.C.M. (RIA) 2010-001 (Tax 2010), aff'd, (1st Cir. Mar. 15, 2011).</li>
 </ol>
 
  
-    <p><b>Q: Who is exempt from the self employment tax? </b></p>
+<p><b>Q: Who is exempt from the self employment tax? </b></p>
  
 <p>According to section 1402 of the Tax Code, not everyone who would otherwise be considered self employed has to pay self-employment tax. Those who are exempt from self-employment tax include but are not limited to: 1) “a duly ordained, commissioned, or licensed minister of a church or a member of a religious order . . .”, 2) Christian Science practitioners, 3) those who earn money from trading stocks or receiving dividends as long as they are not dealers in stocks and securities, 4)  landlords who earn money from rentals and/or personal property leased with real estate, 5) partners of a firm who earn stipend without working in the course of business, and 6) limited partners who earn distributed shares.</p>
     
