--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ layout: default
       
      <h2>Q&A About The Self-Employment Tax </h2>
 
-   <p><b>Q: Why do you have to pay self employment tax? </b></p>
+   <p>Q: Why do you have to pay self employment tax? </p>
 
      <p>Oftentimes, the federal government creates tax policies to generate revenue for programs. In this case, self employment tax ensures that those who do not work (or do not solely work) the normal 9-5, W-2 job pay taxes to fund social security benefits. In other words, the government is not trying to tax your business but is trying to make sure you also contribute to the welfare of the American people.  U.S. v. Cain, S.D.Miss.1953, 113 F.Supp. 304. This obligation is a mandatory one, even if you don’t ever plan to take advantage of social benefits. See Eanes v. C.I.R., U.S.Tax Ct.2000, 2000 WL 1131904.</p>
      
