--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ layout: default
  
     </section>
   <section class="info">
-<h1>The Self Employment Tax Calculator</h1>
+<h1>The 2021 Self Employment Tax Calculator</h1>
     <p>The goal of the self-employment tax calculator is to give those who are entering the freelance economy a rough estimate of the maximum amount they may owe in taxes. The calculator is also useful for those who have a grasp of what their net taxable income will be. The simple interface will allow you to avoid the pesky arithmetic involved in the common tiered tax model. This calculator is only provides a rough estimate and uses the self-employment tax deduction(half of the self employment tax) as well as the standard state and federal deductions to determine your taxable income. </p>
       <p>It's important to note that this website does not claim to give any legal advice. Questions should be referred to a tax professional or lawyer, and estimates should be verified as states vary in the complexity of their deductions. Note that you may also opt for tax credits or itemized deductions. Speak to a professional for more information.</p>
    <h2>Calculating Self-Employment Tax </h2>
