--- a/index.html
+++ b/index.html
@@ -100,9 +100,46 @@ layout: default
    <section class="math">
  
     </section>
+  
+  
+  
+  
   <section class="info">
-<h1>The 2021 Self Employment Tax Calculator</h1>
-    <p>The goal of the self-employment tax calculator is to give those who are entering the freelance economy a rough estimate of the maximum amount they may owe in taxes. The calculator is also useful for those who have a grasp of what their net taxable income will be. The simple interface will allow you to avoid the pesky arithmetic involved in the common tiered tax model. This calculator is only provides a rough estimate and uses the self-employment tax deduction(half of the self employment tax) as well as the standard state and federal deductions to determine your taxable income. </p>
+   <!--Hey! This is the original version
+of Simple CSS Waves-->
+
+<div class="header">
+
+<!--Content before waves-->
+<div class="inner-header flex">
+<!--Just the logo.. Don't mind this-->
+
+  <h1> The 2021 Self Employment Tax Calculator </h1>
+</div>
+
+<!--Waves Container-->
+<div>
+<svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+<defs>
+<path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
+</defs>
+<g class="parallax">
+<use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7" />
+<use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
+<use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
+<use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
+</g>
+</svg>
+</div>
+<!--Waves end-->
+
+</div>
+<!--Header ends-->
+
+<!--Content starts-->
+<div class="content flex">
+ <p>The goal of the self-employment tax calculator is to give those who are entering the freelance economy a rough estimate of the maximum amount they may owe in taxes. The calculator is also useful for those who have a grasp of what their net taxable income will be. The simple interface will allow you to avoid the pesky arithmetic involved in the common tiered tax model. This calculator is only provides a rough estimate and uses the self-employment tax deduction(half of the self employment tax) as well as the standard state and federal deductions to determine your taxable income. </p>
       <p>It's important to note that this website does not claim to give any legal advice. Questions should be referred to a tax professional or lawyer, and estimates should be verified as states vary in the complexity of their deductions. Note that you may also opt for tax credits or itemized deductions. Speak to a professional for more information.</p>
    <h2>Calculating Self-Employment Tax </h2>
    <p>In the US, whether you have a W-2 job or not, if you earn income as an independent contractor or through informal side gigs, the IRS considers you a proprietor of a business, and your business profit is generally subject to federal income tax and self-employment taxes that support Social Security and Medicare.</p>
@@ -180,5 +217,11 @@ layout: default
  
 <p>According to section 1402 of the Tax Code, not everyone who would otherwise be considered self employed has to pay self-employment tax. Those who are exempt from self-employment tax include but are not limited to: 1) “a duly ordained, commissioned, or licensed minister of a church or a member of a religious order . . .”, 2) Christian Science practitioners, 3) those who earn money from trading stocks or receiving dividends as long as they are not dealers in stocks and securities, 4)  landlords who earn money from rentals and/or personal property leased with real estate, 5) partners of a firm who earn stipend without working in the course of business, and 6) limited partners who earn distributed shares.</p>
     
-  </section>
+ 
 </div>
+</div>
+</section>  
+  
+<!--Content ends-->
+
+   
