--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ layout: default
    <!--Hey! This is the original version
 of Simple CSS Waves-->
 
-<div class="header">
+<div class="wave-header">
 
 <!--Content before waves-->
 <div class="inner-header flex">
