--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ layout: default
   <section class="info">
    <!--Hey! This is the original version
 of Simple CSS Waves-->
-  <div class="content">
+   <h1> 2021 Self Employment Tax Calculator </h2>
    <p>The goal of the self-employment tax calculator is to give those who are entering the freelance economy a rough estimate of the maximum amount they may owe in taxes. The calculator is also useful for those who have a grasp of what their net taxable income will be. The simple interface will allow you to avoid the pesky arithmetic involved in the common tiered tax model. This calculator is only provides a rough estimate and uses the self-employment tax deduction(half of the self employment tax) as well as the standard state and federal deductions to determine your taxable income. </p>
       <p>It's important to note that this website does not claim to give any legal advice. Questions should be referred to a tax professional or lawyer, and estimates should be verified as states vary in the complexity of their deductions. Note that you may also opt for tax credits or itemized deductions. Speak to a professional for more information.</p>
    <h2>Calculating Self-Employment Tax </h2>
@@ -185,7 +185,7 @@ of Simple CSS Waves-->
 <p class="bold">Q: Who is exempt from the self employment tax? </p>
  
 <p>According to section 1402 of the Tax Code, not everyone who would otherwise be considered self employed has to pay self-employment tax. Those who are exempt from self-employment tax include but are not limited to: 1) “a duly ordained, commissioned, or licensed minister of a church or a member of a religious order . . .”, 2) Christian Science practitioners, 3) those who earn money from trading stocks or receiving dividends as long as they are not dealers in stocks and securities, 4)  landlords who earn money from rentals and/or personal property leased with real estate, 5) partners of a firm who earn stipend without working in the course of business, and 6) limited partners who earn distributed shares.</p>
-   </div>
+
 </section>  
   
 <!--Content ends-->
