--- a/about.html
+++ b/about.html
@@ -2,12 +2,43 @@
 layout: default
 permalink: /about/
 title: about
----
+---  
+ <div class="wave-header">
+<!--Content before waves-->
+<div class="inner-header flex">
 
-<div class="info">
+<!--Add text here-->
+
+</div>
+
+<!--Waves Container-->
+<div>
+<svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+<defs>
+<path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
+</defs>
+<g class="parallax">
+<use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7" />
+<use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
+<use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
+<use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
+</g>
+</svg>
+</div>
+<!--Waves end-->
+
+</div>
+<!--Header ends-->
+
+<!--Content starts-->
+
+<!--Content ends-->
+  
+  <section class="info">  
 <h2> About </h2>
-
 <p>Dear Self Employed Workers:</p>
+
 
 <p>I built this website to make those entering the gig economy realize that there are a lot of taxes that have to be paid once you enter this space. As someone who has worked contract jobs, I know how tempting it is to feel like you only have to pay your federal and state tax and nothing else. But the ever-looming IRS also demands that we pay self employment tax, and the IRS wants us to pay our taxes every quarter to ensure that we don't spend all of it.</p> 
 
@@ -18,5 +49,5 @@ title: about
 <p>Best,</p>
 
 <p>Raji Ayinla</p>
-  
-</div>
+   
+</section>
