--- a/about.html
+++ b/about.html
@@ -2,8 +2,10 @@
 layout: sticky
 permalink: /about/
 title: about
----  
- <div class="wave-header">
+--- 
+
+<div class="page-card col-1-2"> 
+<div class="wave-header">
 <!--Content before waves-->
 <div class="inner-header flex">
 
@@ -51,3 +53,4 @@ viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
 <p>Raji Ayinla</p>
    
 </section>
+</div>
