--- a/about.html
+++ b/about.html
@@ -4,7 +4,15 @@ permalink: /about/
 title: about
 --- 
 
-<div class="page-card col-1-2"> 
+<div class="w-container">
+	<div class='content-bucket'>
+	  <div class="sidebar col-1-4">
+			
+		</div>
+
+		<div class="post col-3-4">
+				
+		
 <div class="wave-header">
 <!--Content before waves-->
 <div class="inner-header flex">
@@ -54,3 +62,6 @@ viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
    
 </section>
 </div>
+ </div>
+  </div>
+    
