--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,13 +1,53 @@
 ---
-layout: default
+layout: sticky
 permalink: /privacy-policy/
 title: privacy policy
 ---
 
-<div class="info">
-			<h1>Welcome to our Privacy Policy</h1>
-			<h2>Your privacy is critically important to us.</h2>
+<div class="w-container">
+	<div class='content-bucket'>
+	  <div class="sidebar col-1-4">
+			
+		</div>
+
+		<div class="post col-3-4">
+				
 		
+<div class="wave-header">
+<!--Content before waves-->
+<div class="inner-header flex">
+
+<!--Add text here-->
+
+</div>
+
+<!--Waves Container-->
+<div>
+<svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+<defs>
+<path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
+</defs>
+<g class="parallax">
+<use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7" />
+<use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
+<use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
+<use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
+</g>
+</svg>
+</div>
+<!--Waves end-->
+
+</div>
+<!--Header ends-->
+
+<!--Content starts-->
+
+<!--Content ends-->
+  
+  <section class="info">  
+			<h2>Privacy Policy</h2>
+			
 		
 			<p>It is Tax My Gig's policy to respect your privacy regarding any information we may collect while operating our website. This Privacy Policy applies to <a href="https://www.taxmygig.com">https://www.taxmygig.com</a> (hereinafter, "us", "we", or "https://www.taxmygig.com"). We respect your privacy and are committed to protecting personally identifiable information you may provide us through the Website. We have adopted this privacy policy ("Privacy Policy") to explain what information may be collected on our Website, how we use this information, and under what circumstances we may disclose the information to third parties. This Privacy Policy applies only to information we collect through the Website and does not apply to our collection of information from other sources.</p>
 			<p>This Privacy Policy, together with the Terms and conditions posted on our Website, set forth the general rules and policies governing your use of our Website. Depending on your activities when visiting our Website, you may be required to agree to additional terms and conditions.</p>
@@ -52,5 +92,8 @@ title: privacy policy
 			
 			<h2>Credit & Contact Information</h2>
 							<p>This privacy policy was created at <a style="color:inherit;text-decoration:none;" href="https://termsandconditionstemplate.com/privacy-policy-generator/" title="Privacy policy template generator" target="_blank">termsandconditionstemplate.com</a>. If you have any questions about this Privacy Policy, please contact us via <a href="mailto:rajiayinla858@gmail.com">email</a> or <a href="tel:6463610140">phone</a>.</p>
-              </div>
+            </section>
+</div>
+ </div>
+  </div>
 					
