--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -49,7 +49,7 @@ viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
 			<h2>Privacy Policy</h2>
 			
 		
-			<p>It is Tax My Gig's policy to respect your privacy regarding any information we may collect while operating our website. This Privacy Policy applies to <a href="https://www.taxmygig.com">https://www.taxmygig.com</a> (hereinafter, "us", "we", or "https://www.taxmygig.com").</p>
+			<p>It is Tax My Gig's policy to respect your privacy regarding any information we may collect while operating our website. This Privacy Policy applies to <a href="https://www.taxmygig.com">https://www.taxmygig.com</a> (hereinafter, "us," "we," "Tax My Gig," or "taxmygig").</p>
 				<p>We respect your privacy and are committed to protecting personally identifiable information you may provide us through the Website. We have adopted this privacy policy ("Privacy Policy") to explain what information may be collected on our Website, how we use this information, and under what circumstances we may disclose the information to third parties. This Privacy Policy applies only to information we collect through the Website and does not apply to our collection of information from other sources.</p>
 			<p>This Privacy Policy, together with the Terms and conditions posted on our Website, set forth the general rules and policies governing your use of our Website. Depending on your activities when visiting our Website, you may be required to agree to additional terms and conditions.</p>
 
