--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@ viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
 <p>I hope to continue to improve this website to cater more directly to gig workers as time progresses. I know it's tough working these jobs right now. Keep up the noble work.</p>
 
 <p>Best,</p>
-
+ <img src="/images/rajsig.JPG" />
 <p>Raji Ayinla</p>
    
 </section>
