--- a/about.html
+++ b/about.html
@@ -52,9 +52,9 @@ viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
 
 <p>I built this website to make those entering the gig economy realize that there are a lot of taxes that have to be paid once you enter this space. As someone who has worked contract jobs, I know how tempting it is to feel like you only have to pay your federal and state tax and nothing else. But the ever-looming IRS also demands that we pay self employment tax, and the IRS wants us to pay our taxes every quarter to ensure that we don't spend all of it.</p> 
 
-<p>Here's a little bit about me: I am a J.D. Candidate in 2022, an Online Editor of the <a href="https://www.newenglrev.com/"> New England Law Review</a>, and a former Legal Assistant at <a href="http://ccervanteslaw.com/">Cervantes Law.</a></p>
+<p>Here's a little bit about me: I am a J.D. Candidate in 2022, an Online Editor of the <a href="https://www.newenglrev.com/"> New England Law Review</a>, and a Law Clerk at Cellai Law Offices, P.C.</p>
 <p> I am adept at gathering a terrific range of legal and non-legal authorities. In my role as an Associate Member of the New England Law Review, my editors often praised me for my ability to gather sources.</p> 
-<p>In over a year experience as a Legal Assistant, I've researched case law and written briefs that have been used to win cases in trial. I've leveraged my impeccable research abilities to provide up-to-date information regarding taxes for the self-employed.</p>
+<p>In over a year experience as a Law Clerk, I've researched case law and written briefs that have been used to win cases in trial. I've leveraged my impeccable research abilities to provide up-to-date information regarding taxes for the self-employed.</p>
 <p>I hope to continue to improve this website to cater more directly to gig workers as time progresses. I know it's tough working these jobs right now. Keep up the noble work.</p>
 
 <p>Best,</p>
