--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 ---
 layout: default
 ---
@@ -145,7 +146,7 @@ of Simple CSS Waves-->
 
 <p class="byline">
 
-<a href="https://www.taxmygig.com/about" alt="author">Raji Ayinla</a>, J.D. Candidate 2022, <span class="date" alt="date">July 7, 2021</span>
+<a href="https://www.taxmygig.com/about" alt="author">Raji Ayinla</a>, J.D.<span class="date" alt="date">July 7, 2021</span>
 
 </p>
 
@@ -530,8 +531,8 @@ of Simple CSS Waves-->
 
 
 
-<p><strong>Bank charges</strong>, <strong>services</strong>, <strong>ATM fees</strong>, <strong>penalties</strong>, <strong>check writing fees</strong>, <strong>check printing fees</strong>, and <strong>credit card fees</strong> are deductible.</p>
-<p>Specifically, you can deduct the <strong>interest cost of credit cards</strong> For any purchases made using the ATM, you can deduct the ATM fees from your gross income.</p>
+<p><b>Bank charges</b>, <b>services</b>, <b>ATM fees</b>, <b>penalties</b>, <b>check writing fees</b>, <b>check printing fees</b>, and <b>credit card fees</b> are deductible.</p>
+<p>Specifically, you can deduct the <b>interest cost of credit cards</b> For any purchases made using the ATM, you can deduct the ATM fees from your gross income.</p>
 <h4>Other Fees</h4>
 
 
@@ -541,16 +542,18 @@ of Simple CSS Waves-->
 <h4>Software</h4>
 
 
+<p>This section may be most beneficial to freelance web developers who may be paying a subscription fee for various types of software, like <b>development environments</b>.</p>
 
-<p>This section may be most beneficial to freelance web developers who may be paying a subscription fee for various types of software, like <strong>development environments</strong>.</p>
-<p>But this also applies to other freelancers who use <strong>enterprise software</strong> to increase their productivity. You can deduct the amount paid in cash for the tax year from your gross income. Software also includes <strong>paid apps</strong> used in the course of business.</p>
+<p>But this also applies to other freelancers who use <b>enterprise software</b> to increase their productivity. You can deduct the amount paid in cash for the tax year from your gross income. Software also includes <b>paid apps</b> used in the course of business.</p>
+
 <h4>Lost Income</h4>
 
 
-
 <p>When you do freelance work long enough, you’re bound to encounter a customer that refuses to pay you for your services. This is called “bad debt.”</p>
-<p>Unfortunately, you can’t take a bad debt deduction for the time you spent working on that website or copy. But if the customer pays you with a <strong>check that bounces</strong>, you can deduct the expense from your net income.</p>
-<p>&gt; Note: If you’re a drop ship seller on Shopify, you can take a bad debt deduction even if the customer does not pay. That’s because inventory is deductible at the end of the year as costs of goods sold.</p>
+<p>Unfortunately, you can’t take a bad debt deduction for the time you spent working on that website or copy. But if the customer pays you with a <b>check that bounces</b>, you can deduct the expense from your net income.</p>
+
+<blockquote> Note: If you’re a drop ship seller on Shopify, you can take a bad debt deduction even if the customer does not pay. That’s because inventory is deductible at the end of the year as costs of goods sold.</blockquote>
+
 <h4> Inventory</h4>
 
 
