--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@ of Simple CSS Waves-->
 
 
 
-<h1> Self Employment Tax Explained </h1>
+<h1> 2022 Self Employment Tax Explained </h1>
 
 
 
 <p class="byline">
 
-<a href="https://www.taxmygig.com/about" alt="author">Raji Ayinla</a>, J.D. <span class="date" alt="date">July 7, 2021</span>
+<a href="https://www.taxmygig.com/about" alt="author">Raji Ayinla</a>, J.D. <span class="date" alt="date">June 7, 2022</span>
 
 </p>
 
