--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@ of Simple CSS Waves-->
 </ol>
 
 
-
+ <blockquote> Tax My Gig does not provide tax, legal or accounting advice. This material has been prepared for informational purposes only, and is not intended to provide, and should not be relied on for, tax, legal or accounting advice. You should consult your own tax, legal and accounting advisors before engaging in any transaction. </blockquote>
 
   </section>
   
